# VarSim

./: README.md  __init__.py  config.ini  pyproject.toml  splicing.ipynb  splicing.py  variationsimulation.ipynb
src/varsim/: __init__.py
